# finlab-claude-plugin

./: README.md  README.zh-TW.md
finlab-plugin/skills/finlab/: SKILL.md  data-reference.md
mcp-server/: .gitignore  QUICKSTART.md  README.md  cursor-mcp-config.example.json  mcp-config-examples.json  pyproject.toml  test_server.py
mcp-server/finlab_mcp/: __init__.py  server.py
