[project]
name = "finlab-mcp-server"
version = "0.1.0"
description = "MCP server for FinLab quantitative trading package for Taiwan stock market"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "finlab>=0.4.0",
    "pandas>=2.0.0",
    "asyncio>=4.0.0",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py310']

[project.scripts]
finlab-mcp = "finlab_mcp.server:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["finlab_mcp"]
